@@ -29,6 +29,12 @@ Deprecations from 1.2
 - WildcardFilter deprecated, replaced by WildcardFileFilter
   - old class only accepted files, thus had a confusing dual purpose
 
+- FileSystemUtils.freeSpace deprecated, replaced by freeSpaceKb
+  - freeSpace returns a result that varies by operating system and
+    thus isn't that useful
+  - freeSpaceKb returns much better and more consistent results
+  - freeSpaceKb existed in v1.2, so this is a gentle cutover
+
 
 Bug fixes from 1.2
 ------------------
@@ -41,6 +47,9 @@ Bug fixes from 1.2
 - FileSystemUtils.freeSpace/freeSpaceKb [IO-90]
   - Avoid infinite looping in Windows
   - Catch more errors with nice messages
+
+- FileSystemUtils.freeSpace [IO-91]
+  - This is now documented not to work on SunOS 5
 
 
 Enhancements from 1.2
